force-app/main/default/objects/Suspension__c/Suspension__c.object-meta.xml
<CustomObject>
    <description>Used for the Safety Management program and incident tracking</description>
    <label>Suspensions</label>
    <nameField>
        <label>Suspension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suspensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>