force-app/main/default/objects/Suspension__c/fields/Contact_lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <type>Lookup</type>
</CustomField>