force-app/main/default/objects/Suspension__c/fields/dateS1SupplierSuspensionInitiated__c.field-meta.xml
<CustomField>
    <fullName>dateS1SupplierSuspensionInitiated__c</fullName>
    <label>Date TMO Initiated GC Suspension</label>
    <type>Date</type>
</CustomField>