force-app/main/default/objects/Suspension__c/fields/dateS4SupplierSuspensionReleased__c.field-meta.xml
<CustomField>
    <fullName>dateS4SupplierSuspensionReleased__c</fullName>
    <label>Date TMO Released GC Suspension</label>
    <type>Date</type>
</CustomField>