force-app/main/default/objects/Suspension__c/fields/GC_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GC_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suspended General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <type>Lookup</type>
</CustomField>