force-app/main/default/objects/Suspension__c/fields/Incident_Tracker_Link__c.field-meta.xml
<CustomField>
    <fullName>Incident_Tracker_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated when there is a related incident for the suspension</inlineHelpText>
    <label>Incident Tracker Link</label>
    <referenceTo>Incident_Tracker__c</referenceTo>
    <relationshipLabel>Suspensions</relationshipLabel>
    <relationshipName>Suspensions</relationshipName>
    <type>Lookup</type>
</CustomField>