force-app/main/default/objects/Suspension__c/fields/information__c.field-meta.xml
<CustomField>
    <fullName>information__c</fullName>
    <label>information</label>
    <type>TextArea</type>
</CustomField>