force-app/main/default/objects/Suspension__c/fields/Suspension_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Suspension_by_Company__c</fullName>
    <formula>Incident_Tracker_Link__r.SuspensionEntireCompany__c</formula>
    <label>Suspension by Company</label>
    <type>Checkbox</type>
</CustomField>