force-app/main/default/objects/Suspension__c/fields/Suspension_by_Site_Owner__c.field-meta.xml
<CustomField>
    <fullName>Suspension_by_Site_Owner__c</fullName>
    <formula>Incident_Tracker_Link__r.suspensionBySiteOwner__c</formula>
    <label>Suspension by Site Owner</label>
    <type>Checkbox</type>
</CustomField>