force-app/main/default/objects/Suspension__c/fields/Suspension_by_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Suspension_by_Supplier__c</fullName>
    <formula>Incident_Tracker_Link__r.suspensionBySupplier1__c</formula>
    <label>Suspension by Supplier</label>
    <type>Checkbox</type>
</CustomField>