force-app/main/default/objects/Suspension__c/fields/Suspension_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Initiated__c</fullName>
    <label>Suspension Initiated</label>
    <type>DateTime</type>
</CustomField>