force-app/main/default/objects/Suspension__c/fields/Suspension_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Resolved__c</fullName>
    <label>Suspension Resolved</label>
    <type>DateTime</type>
</CustomField>