force-app/main/default/objects/Suspension__c/fields/suspensionBySupplier1__c.field-meta.xml
<CustomField>
    <fullName>suspensionBySupplier1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspension by Prime General Contractor</label>
    <type>Checkbox</type>
</CustomField>